<resources>
    <!--   Titre de l'application   -->
    <string name="app_name">"Outil de cuisson"</string>

    <!--   Titres des onglets   -->
    <string name="afficher">"AFFICHER"</string>
    <string name="ajouter">"AJOUTER"</string>

    <!--   Titres sur la page "AFFICHER"   -->
    <string name="tps_cuisson">"Temps de cuisson"</string>
    <string name="platT">"Plat"</string>
    <string name="dureeT">"Durée"</string>
    <string name="degresT">"Degrès"</string>

    <!--   Titre sur la page "AJOUTER"   -->
    <string name="titre">"Modification de la cuisson d'un plat"</string>
    <string name="plat">"Plat"</string>
    <string name="duree">"Durée de la cuisson"</string>
    <string name="temperature">"Température"</string>
    <string name="btn_effacer">"Effacer"</string>
    <string name="btn_valider">"Valider"</string>


    <string name="toast_ajout">"✔    Le plat %s a bien été ajouté à la liste"</string>
    <string name="toast_modif">"✔    Le plat %s a bien été modifié"</string>

    <string name="erreur_de_saisie">"Erreur de saisie"</string>

    <string name="alert_erreur_de_saisie">"L'une des informations saisie est incorrecte :
        \n\t - nom du plat vide ou contient | \n\t - duree de cuisson nulle ou trop grande \n\nVerifiez les valeurs saisies"
    </string>

    <string name="alert_retour">"retour"</string>

    <!--  Texte des messages options pour la liste des plats  -->
    <string name="supprimer">Supprimer</string>
    <string name="voir_thermostat">Voir thermostat</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>

    <!--    -->
    <string name="titreAlertDialog">Equivalent thermostat</string>
    <string name="equivalentThermostatText">"Cuisson du plat : %s \n\nPour obtenir la température %d°, vous devez régler le thermostat sur %d"</string>
    <string name="retourAlertDialog">Retour</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_menu_option_reinitialiser">Réinitialiser</string>
    <string name="text_menu_option_aide">Aide</string>

    <string name="attention">"Attention !"</string>
    <string name="contenu_attention">"Etes-vous sur de vouloir réinitialiser l'application ?"</string>
    <string name="oui">"Oui"</string>
    <string name="non">"Non"</string>

    <string name="ferme">"Fermer"</string>

    <string name="aide">"Aide"</string>
    <string name="message_aide">"Vous avez deux onglets accessible :\n\nAfficher :\nVous retrouvez tous les plats que vous avez ajouter. Avec un appuis long sur un plat vous avez accés à différentes option. Vous pouvez supprimer le plat. Vous pouvez modifier le plat. Vous pouvez voir le thermostat correspondant et vous pouvez revenir en arrière en appuyant sur Annuler\n\nAjouter :\nIci vous pouvez ajouter le plat de votre choix en y renseignant le nom du plat ainsi que la durée de cuisson et pour finir la température de cuisson. Vous pouvez ensuite cliquer sur Ajouter pour enregistrer le nouveau plat. Mais vous pouvez aussi cliquer sur le bouton Effacer qui a pour but de reinitialiser les valeurs de la page.\n\nMais vous avez aussi accés a un menu d'option en haut à droite qui vous donne la posibilité de rénitialiser l'application ainsi qu'afficher une aide."</string>
    <string name="alert_erreur_plat_existant">"Ce plat est déjà existant"</string>

    <!--  Texte par defaut de la liste  -->
    <string name="liste_item_nomPlat">Nom du plat</string>
    <string name="liste_item_duree">9 h 99</string>
    <string name="liste_item_degree">999</string>

    <string name="plat_existe">Le plat %s existe bien déjà dans la liste !</string>
    <string name="plat_existe_pas">Le plat %s n\'existe pas dans la liste !</string>
    <string name="btn_modifier">MODIFIER</string>
    <string name="rechercher_un_plat">Rechercher un plat</string>
    <string name="chercher">Chercher</string>


</resources>