<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".Ajouter"
        android:stretchColumns="2">

        <FrameLayout
            android:id="@+id/frame_layout"/>

        <TextView
            android:id="@+id/arf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            style="@style/titreApp"/>

        <!-- Saisir le nom du plat -->
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plat"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/color_titre_liste"/>
            <EditText
                android:id="@+id/modifNomPlat"
                android:layout_span="2"
                android:inputType="text"
                android:maxLength="20"
                android:background="@drawable/input_custom"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/ic_baseline_dinner_dining_24"
                android:drawablePadding="10dp"
                android:layout_marginEnd="10dp"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duree"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/color_titre_liste"/>
            <TimePicker
                android:id="@+id/modifDureeCuisson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/color_titre_liste"/>
            <EditText
                android:id="@+id/modifTemperature"
                android:layout_column="2"
                android:inputType="number"
                android:background="@drawable/input_custom"
                android:paddingStart="10dp"
                android:drawableStart="@drawable/ic_baseline_whatshot_24"
                android:drawablePadding="10dp"
                android:layout_marginEnd="10dp"/>
        </TableRow>
    </TableLayout>
</ScrollView>
